Adding Email Service and assigned to feature for Activity Calendar
