# src/main/java/com/activity/activitycalendar/controller/UserController.java
@@ -9,11 +9,14 @@ import com.activity.activitycalendar.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import lombok.RequiredArgsConstructor;
+
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -24,6 +27,7 @@ public class UserController {
 
     private final UserService userService;
     private KeycloakService keycloakService;
+
 
     @Autowired(required = false)
     public void setDependency(KeycloakService keycloakService) {
@@ -51,4 +55,10 @@ public class UserController {
         return ResponseEntity.status(201).body(this.userService.createUser(user));
     }
 
+    @GetMapping("/getAllUser")
+    public ResponseEntity<List<UserDto>> getUsers() {
+        List<User> users = this.userService.getAllUsers();
+        List<UserDto> userDtoList = UserMapper.userMapper.mapUserListToDtoList(users);
+        return  ResponseEntity.ok(userDtoList);
+    }
 }
